fix helpers visibility.scss

--- a/src/styles/helpers/visibility/visibility.scss
+++ b/src/styles/helpers/visibility/visibility.scss
@@ -23,10 +23,7 @@
             @each $name, $value in $visibility {
                 //padding: (  "1": 4px, "2": 8px... )
                 //name = 1, offset = 4px
-                .visibility-#{$name}-#{$point} {
-                    visibility: $value !important;
-                }
-                .visibility-#{$name}-#{$point} {
+                .#{$name}-#{$point} {
                     visibility: $value !important;
                 }
             }
